- Use FVM to specify flutter version

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,6 +15,17 @@ analyzer:
   errors:
     invalid_annotation_target: ignore
 
+custom_lint:
+  rules:
+    - prefer_fake_over_mock
+    - no_optional_operators_in_tests
+    - forbid_forced_unwrapping:
+    - document_fake_parameters
+    - document_interface
+    - todo_with_story_links
+    - no_internal_method_docs
+    - no_direct_instantiation: false
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
