--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,6 +14,9 @@ analyzer:
     - custom_lint
   errors:
     invalid_annotation_target: ignore
+  exclude:
+    - lib/generated/**
+    - lib/**.g.dart
 
 custom_lint:
   rules:
@@ -38,8 +41,8 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    avoid_print: false
+    prefer_single_quotes: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
