--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '3.8.0'
+  sdk: '>=3.7.2 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
   
   cupertino_icons: 1.0.8
   flutter_bloc: 9.1.0
@@ -18,13 +21,19 @@ dependencies:
   
   supabase_flutter: 2.9.0
   flutter_dotenv: 5.2.1
-  flavor_config: 1.4.0
   logger: 2.5.0
   stack_trace: 1.12.1
   equatable: 2.0.7
   rxdart: 0.28.0
   freezed_annotation: 3.0.0
   json_annotation: 4.9.0
+  core_ui:
+    git:
+      url: https://github.com/ripplearc/coreui.git
+      ref: refactor/ui-components
+  pinput: 5.0.1
+  dartz: 0.10.1
+
 
 
   
@@ -43,9 +52,11 @@ dev_dependencies:
   json_serializable: 6.9.5
   custom_lint: 0.7.5
   ripplearc_flutter_lint: 0.2.2
+  bloc_test: 10.0.0
+
 
 flutter:
-
+  generate: true
   uses-material-design: true
   
   assets:
@@ -59,3 +70,7 @@ flutter_native_splash:
   background_image: "assets/images/splash_bg.png"
   android: true
   ios: true
+  android_12:
+    image: "assets/icons/splash_icon.png"
+    color: "#015B7C"
+    icon_background_color: "#FFFFFF"
