--- a/.github/workflows/run_c_check.yml
+++ b/.github/workflows/run_c_check.yml
@@ -22,8 +22,25 @@ jobs:
           BRANCH_NAME=$(echo "$PR_JSON" | jq -r '.head.ref')
           echo "BRANCH: $BRANCH_NAME"
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+      - name: Trigger Pre-check on Source Branch
+        env:
+          CODEMAGIC_API_TOKEN: ${{ secrets.CODEMAGIC_API_TOKEN }}
+          CODEMAGIC_APP_ID: ${{ secrets.CODEMAGIC_APP_ID }}
+        run: |
+          FULL_RESPONSE=$(curl -s \
+            -X POST \
+            -H "Content-Type: application/json" \
+            -H "x-auth-token: $CODEMAGIC_API_TOKEN" \
+            -d '{
+              "appId": "'"$CODEMAGIC_APP_ID"'",
+              "workflowId": "pre-check",
+              "branch": "'"${{ steps.extract-branch.outputs.branch_name }}"'"
+            }' \
+            "https://api.codemagic.io/builds"
+          )
 
-      - name: Trigger Codemagic on Source Branch
+          echo "Full API response: $FULL_RESPONSE"
+      - name: Trigger Comprehensive Check on Source Branch
         env:
           CODEMAGIC_API_TOKEN: ${{ secrets.CODEMAGIC_API_TOKEN }}
           CODEMAGIC_APP_ID: ${{ secrets.CODEMAGIC_APP_ID }}
