--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
   
   cupertino_icons: 1.0.8
   flutter_bloc: 9.1.0
@@ -18,13 +21,16 @@ dependencies:
   
   supabase_flutter: 2.9.0
   flutter_dotenv: 5.2.1
-  flavor_config: 1.4.0
   logger: 2.5.0
   stack_trace: 1.12.1
   equatable: 2.0.7
   rxdart: 0.28.0
   freezed_annotation: 3.0.0
   json_annotation: 4.9.0
+  core_ui: 0.0.1
+  pinput: 5.0.1
+  dartz: 0.10.1
+
 
 
   
@@ -43,9 +49,10 @@ dev_dependencies:
   json_serializable: 6.9.5
   custom_lint: 0.7.5
   ripplearc_flutter_lint: 0.2.2
+  bloc_test: 10.0.0
+
 
 flutter:
-
   uses-material-design: true
   
   assets:
@@ -59,3 +66,7 @@ flutter_native_splash:
   background_image: "assets/images/splash_bg.png"
   android: true
   ios: true
+  android_12:
+    image: "assets/icons/splash_icon.png"
+    color: "#015B7C"
+    icon_background_color: "#FFFFFF"
