--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,3 +4,4 @@ codemagic.yaml  @ripplearc/construculator-devop
 mutation_test_rules.xml @ripplearc/construculator-devop
 analysis_options.yaml @ripplearc/construculator-devop
 run_check.sh.yaml @ripplearc/construculator-devop
+lib/app/app_bootstrap.dart @ripplearc/construculator-devop
