--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ app.*.map.json
 /coverage
 /test-results
 review.text
-pr_review_for_claude.txt
+reviews/
 assets/env/.env.*
 !assets/env/.env.template
 mutation_test_rules.xml
