--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -214,7 +214,7 @@ workflows:
           fi
           sudo apt-get install -y lcov
           mkdir -p test-results
-          fvm flutter test test/features test/libraries test/app test/widgets --coverage --machine > test-results/flutter.json
+          fvm flutter test test/features test/libraries test/app --coverage --machine > test-results/flutter.json
           lcov --remove coverage/lcov.info '**/*.g.dart' '**/*.freezed.dart' '**/l10n/**' -o coverage/lcov.info
           # Compute coverage
           if [ ! -f "coverage/lcov.info" ] || [ ! -s "coverage/lcov.info" ]; then
