--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   core_ui: 0.2.0
   pinput: 5.0.1
   dartz: 0.10.1
+  ripplearc_linter: ^0.1.2
 
 
 
@@ -49,7 +50,6 @@ dev_dependencies:
   json_serializable: 6.9.5
   custom_lint: 0.7.5
   bloc_test: 10.0.0
-  ripplearc_linter: 0.1.1
 
 
 flutter:
