--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -17,7 +17,8 @@ analyzer:
   exclude:
     - lib/generated/**
     - lib/**.g.dart
-
+    - lib/**.freezed.dart
+    - lib/l10n/generated/**
 custom_lint:
   rules:
     - prefer_fake_over_mock
