CA-389 chore: Integrate RippleArc Linter Package into the Construculator App (#122)
* Migrated to `ripplearc_linter` v0.1.1 (from `ripplearc_flutter_lint` v0.2.2)

* Added 6 new lint rules with consistent configuration

* Update `ripplearc_linter` to version 0.1.2

* Update analysis options to exclude additional generated files from analysis

* Update custom_lint.yaml to clarify usage and configuration of lint rules

--- a/custom_lint.yaml
+++ b/custom_lint.yaml
@@ -1,8 +1,14 @@
-rules:
-  - prefer_fake_over_mock
-  - no_optional_operators_in_tests
-  - forbid_forced_unwrapping
-
-analyzer:
-  plugins:
-    - custom_lint_library 
+# This file is optional.
+# It is ONLY used to provide rule-specific configurations, not to enable or disable rules.
+# Rules are enabled/disabled in the 'analysis_options.yaml' file.
+#
+# ---
+#
+# EXAMPLE:
+# If a rule (e.g., 'use_logger') exposed custom options, you would configure them here.
+# The code for the 'use_logger' lint would then read these values.
+#
+# use_logger:
+#   allowed_levels:
+#     - warning
+#     - error
