--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   core_ui: 0.2.0
   pinput: 5.0.1
   dartz: 0.10.1
+  ripplearc_linter: ^0.1.2
 
 
 
@@ -48,7 +49,6 @@ dev_dependencies:
   freezed: 3.0.6
   json_serializable: 6.9.5
   custom_lint: 0.7.5
-  ripplearc_flutter_lint: 0.2.2
   bloc_test: 10.0.0
 
 
