chore: update Docker configuration to use build arguments for Flutter version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '3.8'
 services:
   flutter:
-    build: .
+    build:
+      context: .
+      args:
+        FLUTTER_VERSION: 3.32.0
     volumes:
       - ./test:/app/test
     stdin_open: true
