chore: update Dockerfile and docker-compose to enhance Flutter environment setup and ensure proper FVM integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
         FLUTTER_VERSION: 3.32.0
     volumes:
       - ./test:/app/test
+      - ./lib:/app/lib
     stdin_open: true
     tty: true
