--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -55,6 +55,9 @@ workflows:
           echo "🛠️ Analyzing changed files:"
           echo "$CHANGED_DART_FILES"
           fvm flutter analyze --fatal-infos --fatal-warnings $CHANGED_DART_FILES
+          
+          echo "🔍 Running custom linter (ripplearc_linter rules) on changed files..."
+          dart run custom_lint $CHANGED_DART_FILES
 
       - name: Run Unit Tests With Coverage
         script: |
@@ -203,6 +206,21 @@ workflows:
           export PATH="$PATH":"$HOME/.pub-cache/bin":"$FCI_BUILD_DIR/.fvm/flutter_sdk/bin"
           echo "🛠️ Running Flutter analysis..."
           fvm flutter analyze --fatal-infos --fatal-warnings .
+          
+          # Get base commit for custom linter check on changed files only
+          git fetch origin $BASE_BRANCH || git fetch origin main
+          BASE_COMMIT=$(git merge-base HEAD origin/$BASE_BRANCH 2>/dev/null || git merge-base HEAD origin/main)
+          
+          # Get committed changed files (compared to base commit) for custom_lint only
+          CHANGED_DART_FILES=$(git diff --name-only --diff-filter=d "$BASE_COMMIT" -- "lib/*.dart" "test/*.dart")
+          
+          # Run custom linter only on changed files
+          if [ -z "$CHANGED_DART_FILES" ]; then
+            echo "✅ No Dart files changed, skipping custom linter"
+          else
+            echo "🔍 Running custom linter (ripplearc_linter rules) on changed files..."
+            dart run custom_lint $CHANGED_DART_FILES
+          fi
 
       - name: Run Unit Tests With Coverage Report
         script: |
