--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -66,7 +66,7 @@ workflows:
           else
             echo "🔍 Running custom linter (ripplearc_linter rules) on changed files..."
             ALL_RULES="prefer_fake_over_mock,forbid_forced_unwrapping,no_optional_operators_in_tests,document_fake_parameters,document_interface,todo_with_story_links,no_internal_method_docs,specific_exception_types,avoid_test_timeouts,private_subject,sealed_over_dynamic"
-            dart run ripplearc_linter:standalone_checker --rules $ALL_RULES $FILTERED_FILES
+            fvm dart run ripplearc_linter:standalone_checker --rules $ALL_RULES $FILTERED_FILES
           fi
 
       - name: Run Unit Tests With Coverage
@@ -233,7 +233,7 @@ workflows:
           else
             echo "🔍 Running custom linter (ripplearc_linter rules) on changed files..."
             ALL_RULES="prefer_fake_over_mock,forbid_forced_unwrapping,no_optional_operators_in_tests,document_fake_parameters,document_interface,todo_with_story_links,no_internal_method_docs,specific_exception_types,avoid_test_timeouts,private_subject,sealed_over_dynamic"
-            dart run ripplearc_linter:standalone_checker --rules $ALL_RULES $FILTERED_FILES
+            fvm dart run ripplearc_linter:standalone_checker --rules $ALL_RULES $FILTERED_FILES
           fi
 
       - name: Run Unit Tests With Coverage Report
